--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "webpack --config webpack.config.js -p",
-        "dev-server": "webpack-dev-server --config webpack.config.js"
+        "dev-server": "webpack-dev-server --config webpack.config.js",
+        "dev-dashboard": "webpack-dashboard webpack-dev-server --config webpack.config.js"
     },
     "repository": {
         "type": "git",
@@ -38,6 +39,7 @@
         "url-loader": "^2.1.0",
         "webpack": "^4.40.2",
         "webpack-cli": "^3.3.9",
+        "webpack-dashboard": "^3.2.0",
         "webpack-dev-server": "^3.8.1"
     }
 }
